--- a/CheckoutCom.ShoppingList/CheckoutCom.ShoppingList/Properties/launchSettings.json
+++ b/CheckoutCom.ShoppingList/CheckoutCom.ShoppingList/Properties/launchSettings.json
@@ -9,17 +9,17 @@
   },
   "profiles": {
     "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "api/values",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+        "commandName": "IISExpress",
+        "launchBrowser": true,
+        "launchUrl": "api/shoppinglist",
+        "environmentVariables": {
+            "ASPNETCORE_ENVIRONMENT": "Development"
+        }
     },
     "CheckoutCom.ShoppingList": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "api/shoppinglist",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
